<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings -->
    <string name="app_name">GolpeDeCalor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Ingresar</string>
    <string name="sign_up">Registrarse</string>
    <string name="noid">¿No cuentas con un id?</string>
    <string name="sexo">   Sexo</string>
    <string name="fecha_nacimiento">Nacimiento (dd/mm/aa)</string>
    <string name="button_crear_grupo">Grupo Nuevo</string>
    <string name="button_agregar_grupo">Grupo Existente</string>
    <string name="tunumeroid">Tu número de identificación es el siguiente: </string>
    <string name="recuerdaid">Porfavor anótalo o memorízalo ya que con eso ingresarás al sistema</string>
    <string name="cotinuarbt">Continuar</string>
    <string name="favrodeselecc">Favor de seleccionar un grupo:</string>
    <string name="nuevogrupo">¿Nuevo grupo?</string>
    <string name="creargrupo">Crear grupo</string>
    <string name="nombregpo">Nombre del grupo</string>
    <string name="agregarpersona">Agregar persona</string>
    <string name="empezarmonitoreo">Empezar monitoreo</string>
    <string name="usuarioexistente">Usuario existente:</string>
    <string name="usuarionuevo">¿Usuario nuevo?</string>
    <string name="agregarusuario">Agregar integrante</string>
    <string name="integrantes">Integrantes:</string>
    <string name="monitoreoenprog">Monitoreo en progreso</string>
    <string name="monitoreandoa">Monitoreando a:</string>
    <string name="nombre">Nombre</string>
    <string name="ritmocardiacio">R.C.</string>
    <string name="temperatura">Temp.</string>
    <string name="radiacion">Rad.</string>

    <string-array name="sexos">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <!-- Colores -->
    <color name="Beige_background">#fbece1</color>
    <color name="Gris_background">#e1dfdf</color>

    <!-- Fonts -->
    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_ingresar">IngresarActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_show_id">ShowIDActivity</string>
    <string name="title_activity_create_view_group">CreateViewGroupActivity</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="title_activity_monitoring">MonitoringActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>

</resources>
