<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="itesm.mx.golpedecalor.MonitoringActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitoreoenprog"
        android:id="@+id/textView10"
        android:textColor="#ff000000"
        android:textSize="40dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitoreandoa"
        android:id="@+id/textView11"
        android:textColor="#ff000000"
        android:textSize="25dp"
        android:layout_marginTop="25dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/tablaTL">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:id="@+id/textView12"
                android:layout_column="0"
                android:textColor="#ff000000"
                android:textSize="15dp" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/ritmocardiacio"
                android:id="@+id/textView13"
                android:layout_column="1"
                android:textColor="#ff000000"
                android:textSize="15dp" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/temperatura"
                android:id="@+id/textView14"
                android:layout_column="2"
                android:textColor="#ff000000"
                android:textSize="15dp" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/radiacion"
                android:id="@+id/textView15"
                android:layout_column="3"
                android:textColor="#ff000000"
                android:textSize="15dp" />
        </TableRow>
    </TableLayout>
</LinearLayout>
