<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="itesm.mx.golpedecalor.CreateViewGroupActivity"
    android:weightSum="1">

    <ViewSwitcher
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cambioVS" >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/groupNameET"
            android:hint="@string/nombregpo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupNameTV"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </ViewSwitcher>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/integrantes"
        android:id="@+id/textView9"
        android:textColor="#ff000000"
        android:textSize="25dp"
        android:layout_marginTop="10dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="301dp"
        android:id="@+id/groupMembersLV"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregarpersona"
        android:id="@+id/addPersonBT"
        android:onClick="onClickAgregarPersona"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empezarmonitoreo"
        android:id="@+id/startMonitoringBT"
        android:onClick="onClickEmpezarMonitoreo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />
</LinearLayout>
