<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="itesm.mx.golpedecalor.ShowIDActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tunumeroid"
        android:id="@+id/textView3"
        android:textSize="30dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_above="@+id/idTV"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="59dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idTV"
        android:gravity="center"
        android:textSize="40dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuerdaid"
        android:id="@+id/textView4"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_below="@+id/idTV"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cotinuarbt"
        android:id="@+id/cotinuarBT"
        android:onClick="onClickContinuar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />
</RelativeLayout>
