<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="itesm.mx.golpedecalor.SelectGroupActivity"
    android:orientation="vertical"
    android:background="#f0f7e8">


    <TextView
        android:id="@+id/nombreTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:layout_margin="10dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favrodeselecc"
        android:id="@+id/textView5"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/miembrosLV"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevogrupo"
        android:id="@+id/textView6"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:layout_marginTop="5dp"/>

    <Button
        android:text="@string/creargrupo"
        android:id="@+id/button2"
        android:onClick="onClickNuevoGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="15dp"
        android:layout_marginTop="5dp"
        style="@style/DefaultButtonText"
        android:background="@drawable/button_default_bg"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
