<!--
    Golpe de Calor

    Copyright (C) 2015
    Marcelo Alberto Cantú Quiroga
    Zyanya Valdés Esquivel
    Hugo León Garza

    Última Modificación: 20 de Abril del 2015
    Nombre del Archivo: activity_add_main.xml
    Convención de nombres: "CamelCase"
    Versión 3.0

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:background="@color/Beige_background">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/linearlayout_bg"
            android:padding="8dp"

            android:id="@+id/linearLayout">
            <EditText
                android:id="@+id/IdET"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/edittext_top_bg"
                android:textSize="30sp"
                android:padding="10dp"
                android:hint="ID"
                android:textColorHint="#cccccc"
                android:drawableLeft="@drawable/usericon"
                android:layout_marginBottom="2dp"
                android:inputType="number" />

            <Button
                android:id="@+id/ingresarBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sign_in"
                android:background="@drawable/button_default_bg"
                style="@style/DefaultButtonText"
                android:onClick="onClickIngresar"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="40dp"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noid"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp" />

        <Button
            style="@style/DefaultButtonText"
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_up"
            android:background="@drawable/button_default_bg"
            android:onClick="onClickRegistrarse"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</RelativeLayout>

